--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,13 +2,13 @@
 // http://ionicframework.com/docs/theming/
 
 $pokemon-red: #ff0000;
-$pokemon-blue: #3b4cca;
-$pokemon-yellow: #ffde00;
+$pokemon-blue: #3F6FDE;
+$pokemon-yellow: #FFD030;
 $pokemon-orange: #b3a125;
 
 :root {
-    --pokemon-red: #ff0000;
-  --pokemon-blue: #3b4cca;
-  --pokemon-yellow: #ffde00;
+  --pokemon-red: #ff0000;
+  --pokemon-blue: #3F6FDE;
+  --pokemon-yellow: #FFD030;
   --pokemon-orange: #b3a125;
 }
