--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,42 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 // @import "@ionic/angular/css/palettes/dark.system.css";
+
+.normal-color { background-color: #929240; }  
+.fire-color { background-color: #E06000; }  
+.water-color { background-color: #2870E0; }  
+.electric-color { background-color: #E8B000; }  
+.grass-color { background-color: #48A818; }  
+.ice-color { background-color: #50C0C0; }  
+.fighting-color { background-color: #A00000; }  
+.poison-color { background-color: #800080; }  
+.ground-color { background-color: #D0A020; }  
+.flying-color { background-color: #8060E0; }  
+.psychic-color { background-color: #E02060; }  
+.bug-color { background-color: #909800; }  
+.rock-color { background-color: #988020; }  
+.ghost-color { background-color: #503070; }  
+.dragon-color { background-color: #4010E0; }  
+.dark-color { background-color: #503820; }  
+.steel-color { background-color: #9090C0; }  
+.fairy-color { background-color: #E06080; }  
+
+
+.normal-color-older { background-color: #A8A878; }  
+.fire-color-older { background-color: #F08030; }  
+.water-color-older { background-color: #6890F0; }  
+.electric-color-older { background-color: #F8D030; }  
+.grass-color-older { background-color: #78C850; }  
+.ice-color-older { background-color: #98D8D8; }  
+.fighting-color-older { background-color: #C03028; }  
+.poison-color-older { background-color: #A040A0; }  
+.ground-color-older { background-color: #E0C068; }  
+.flying-color-older { background-color: #A890F0; }  
+.psychic-color-older { background-color: #F85888; }  
+.bug-color-older { background-color: #A8B820; }  
+.rock-color-older { background-color: #B8A038; }  
+.ghost-color-older { background-color: #705898; }  
+.dragon-color-older { background-color: #7038F8; }  
+.dark-color-older { background-color: #705848; }  
+.steel-color-older { background-color: #B8B8D0; }  
+.fairy-color-older { background-color: #EE99AC; }  
