--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -2,16 +2,18 @@
     display: flex; 
     flex-direction: row; 
     flex-wrap: wrap;
-    padding-left: 35px;
     margin-top: 65px;
-    
+    justify-content: center;
     .pokemon-card {
         margin: 10px;
-        flex: 0 0 32%;
+        flex: 0 0 23%;
         height: 250px;
+        min-width: 325px;
+        max-width: 350px;
         position: relative;
         margin-bottom: 100px;
         border-radius: 10px;
+        
 
         img {
             width: 200px;
@@ -19,6 +21,7 @@
             top: -100px;
             left: 50%;
             transform: translate(-50%, 0);
+            filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.5));
         }
 
         .pokemon-info {
