--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -2,8 +2,9 @@
     display: flex; 
     flex-direction: row; 
     flex-wrap: wrap;
-    margin-top: 65px;
+    margin-top: 85px;
     justify-content: center;
+
     .pokemon-card {
         margin: 10px;
         flex: 0 0 23%;
@@ -13,7 +14,20 @@
         position: relative;
         margin-bottom: 100px;
         border-radius: 10px;
-        
+        transition: .4s all;
+
+        border: 1px solid transparent;
+
+        &:hover {
+            cursor: pointer;
+            
+            box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.5);
+            img {
+                width: 230px;
+                top: -130px;
+                filter: drop-shadow(8px 8px 12px rgba(0, 0, 0, 0.6));
+            }
+        }
 
         img {
             width: 200px;
@@ -22,6 +36,7 @@
             left: 50%;
             transform: translate(-50%, 0);
             filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.5));
+            transition: .4s all;
         }
 
         .pokemon-info {
