--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,7 @@
       <img src="../../assets/logo.png" style="display: block;"/>
       <div class="search-row">
         <ion-icon slot="start" name="search"></ion-icon>
-        <ion-input [(ngModel)]="searchString" (input)="checkFilterString()" type="text" placeholder="Pokemon name"/>
+        <ion-input [(ngModel)]="searchString" type="text" placeholder="Pokemon name"/>
         <button (click)="filter()" >
           Search
         </button>
