--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -3,7 +3,7 @@
     flex-direction: row; 
     flex-wrap: wrap;
     margin-top: 85px;
-    justify-content: center;
+    justify-content: space-evenly;
 
     .pokemon-card {
         margin: 10px;
@@ -15,8 +15,12 @@
         margin-bottom: 100px;
         border-radius: 10px;
         transition: .4s all;
-
         border: 1px solid transparent;
+        background-image: url("../../../assets/psychic-copy.svg");
+        background-size: 150px;
+        background-repeat: no-repeat;
+        background-position: 138% 180%;
+        
 
         &:hover {
             cursor: pointer;
@@ -37,6 +41,7 @@
             transform: translate(-50%, 0);
             filter: drop-shadow(4px 4px 6px rgba(0, 0, 0, 0.5));
             transition: .4s all;
+            overflow: visible !important;
         }
 
         .pokemon-info {
