--- a/src/app/pokemon-detalhes/pokemon-detalhes.page.scss
+++ b/src/app/pokemon-detalhes/pokemon-detalhes.page.scss
@@ -55,6 +55,10 @@ $main-padding: 40px;
         border-radius: 5px;
         margin-right: 3px;
         margin-bottom: 3px;
+        text-align: center;
+        ion-icon {
+            font-size: 12px;
+        }
     }
 
 
